bk_ida/gccida/g1/defs_to_varying
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/defs_to_varying/src/ssa-ccp.c:696:4: error: expected ';' after expression
rtx reg; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/defs_to_varying/src/ssa-ccp.c:696:5: error: use of undeclared identifier 'reg'
rtx reg; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/defs_to_varying/src/ssa-ccp.c:705:1: error: use of undeclared identifier 'reg'
reg = defs->ref->reg; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/defs_to_varying/src/ssa-ccp.c:706:17: error: use of undeclared identifier 'reg'
if ( *( _WORD *)reg != 63 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/defs_to_varying/src/ssa-ccp.c:708:24: error: use of undeclared identifier 'reg'
rtuint = *( _DWORD *)( reg->fld[0].rtwint + 8); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/defs_to_varying/src/ssa-ccp.c:720:10: error: use of undeclared identifier 'reg'
rtuint = reg->fld[0].rtuint; 
         ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/defs_to_varying/src/obj/ssa-ccp.o] Error 1
